<resources>
    <string name="app_name">伴君行</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string-array name="home_title">
        <item> 首页 </item>
        <item> 车辆 </item>
        <item> 维修 </item>
        <item> 我的 </item>
    </string-array>
    <string-array name="new_home_title">
        <item> 首页 </item>
        <item> 证照 </item>
        <item> 资讯 </item>
        <item> 我 </item>
    </string-array>
    <string name="logintitle">登录</string>
    <string name="username">账号 :</string>
    <string name="password">密码 :</string>
    <string name="forget">忘记密码?</string>
    <string name="isEmpty">您输入的用户名或密码为空</string>
    <string name="register">注册账号</string>
    <string name="loginvicetory">登陆成功</string>
    <string name="error">参数错误</string>
    <string name="throwable">网络链接失败,请检查网络设置</string>
    <string name="cannot_login">无法登录</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_no_pic">请拍摄图片！</string>
    <string name="nodata">无</string>
    <string name="setcount">设置账号 :</string>
    <string name="setpassword">设置密码 :</string>
    <string name="confirmpassword">确认密码 :</string>
    <string name="phone">手机号码 :</string>
    <string name="registertitle">注册</string>
    <string name="realname">真实姓名 :</string>
    <string name="idnumber">身份证号 :</string>
    <string name="registertip">我已阅读并接受</string>
    <string name="warntip">GTW车辆智能管理系统用户注册协议。</string>
    <string name="sure">注册</string>
    <string name="hintpass">请设置密码</string>
    <string name="confirmpass">请再次输入新密码</string>
    <string name="hintphone">请输入真实有效手机号码</string>
    <string name="hintname">请输入您的真实姓名</string>
    <string name="hintid">请输入真实的身份证号</string>
    <string name="counttip">设置账号为空</string>
    <string name="codetip">设置密码为空</string>
    <string name="iscodetip">确认密码为空</string>
    <string name="phonetip">手机号码为空</string>
    <string name="realnametip">真实姓名为空</string>
    <string name="idtip">身份证号为空</string>
    <string name="password_min_length">密码长度至少为六位</string>
    <string name="mobile_wrong">您输入的手机号不合法</string>
    <string name="phone_ower_tip">你输入亲情号码包含车主号码</string>
    <string name="id_num_wrong">您输入的身份证号不合法</string>
    <string name="password_wrong">两次密码不一致</string>
    <string name="register_ok">注册成功</string>
    <string name="register_gou">请勾选注册协议</string>
    <string name="dialog_b_text">确认</string>
    <string name="dialog_b_chice">请选择下列选项</string>
    <string name="code_wrong">验证码为空</string>
    <string name="forgettopic">找回密码</string>
    <string name="forgetpwd">新密码 :</string>
    <string name="forgetrealname">真实姓名 :</string>
    <string name="forgetrealtip">姓名不正确,请重新输入.</string>
    <string name="forgetIdtip">身份证号不正确，请重新输入.</string>
    <string name="forgetphonetip">手机号码不正确，请重新输入.</string>
    <string name="forgetidnumber">身份证号 :</string>
    <string name="forgetconfpwd">确认密码 :</string>
    <string name="forgetphone">手机号码 :</string>
    <string name="forgetcode">验证码 :</string>
    <string name="forgetsendcode">发送验证码</string>
    <string name="forgetisEmpty">您输入的信息不全</string>
    <string name="confirm">确认</string>
    <string name="forgetidwrong">您输入的身份证号不合法</string>
    <string name="forgetphonewrong">您输入的手机号不合法</string>
    <string name="forgetname">账号 ：</string>
    <string name="forgetnametip">账号不正确，请重新输入</string>
    <string name="modifytitle">修改密码</string>
    <string name="modifycurrentpwd">当前密码 :</string>
    <string name="modifynowpwd">新密码 :</string>
    <string name="modifyconfirmpwd">确认密码 :</string>
    <string name="modifycurrenttip">当前密码错误,请重试.</string>
    <string name="modifyconfirmtip">新密码不一致,请重新输入.</string>
    <string name="modifyisEmpty">您输入的信息不全</string>
    <string name="modifyisTip">输入的密码至少是6位到12位</string>
    <string name="home_tittle">首页</string>
    <string name="home_topic">乐之行</string>
    <string name="home_div">确认驾驶员</string>
    <string name="home_modify">修改密码</string>
    <string name="home_back">退出账号</string>
    <string name="home_connect">未连接</string>
    <string name="home_div_license">我是驾驶员</string>
    <string name="home_id_card_y">身份未验证</string>
    <string name="home_map">地图导航</string>
    <string name="home_car_walk">请人移车</string>
    <string name="home_car_position">爱车位置</string>
    <string name="home_borrow_car">借车还车</string>
    <string name="home_road_side">道路救援</string>
    <string name="home_wash_car">加油洗车</string>
    <string name="home_make_diver">自驾游</string>
    <string name="home_car_friend">车友会</string>
    <string name="home_license_tip">未绑定驾驶证，请绑定驾驶证！</string>
    <string name="personaltopic">个人中心</string>
    <string name="personalname">张三李四</string>
    <string name="personalphone">亲情号码设置</string>
    <string name="personalpassword">密码设置</string>
    <string name="personaldemand">需求建议</string>
    <string name="appblindter">APP绑定智能终端</string>
    <string name="personalhomeback">退出当前账号</string>
    <string name="changecar">切换车辆</string>
    <string name="personaltip">请先登陆</string>
    <string name="preservecar">维修保养</string>
    <string name="preservesafe">车辆检测</string>
    <string name="preservesense">保养常识</string>
    <string name="preservedrive">行驶数据</string>
    <string name="preserveshop">保险购买</string>
    <string name="preservearam">出险报警</string>
    <string name="cartopic">车辆管理</string>
    <string name="carlicense">我的驾驶证</string>
    <string name="mycar">我的机动车</string>
    <string name="carviolation">违章查询</string>
    <string name="carviolationprocess">违章处理</string>
    <string name="carTrafficinfo">交管信息 :</string>
    <string name="carhint">长沙市五一路、湘江路单号限行</string>
    <string name="cartrafficlaws">交通法规知识</string>
    <string name="caraudio">音量</string>
    <string name="caraudiotip">(车载广播)</string>
    <string name="carlciense">请连接自己的车</string>
    <string name="carinspection">年检期止</string>
    <string name="carnormal">正常</string>
    <string name="cartime">2016-11-16</string>
    <string name="violationtime">更新时间 :</string>
    <string name="violationadress">湖南</string>
    <string name="violationfine">罚款</string>
    <string name="violationnot">未处理</string>
    <string name="violationcent">记分</string>
    <string name="violationdeal">一键处理违章</string>
    <string name="item_time">时间:</string>
    <string name="item_address">地点:</string>
    <string name="item_reason">原因:</string>
    <string name="item_money">交罚款</string>
    <string name="violationonnum">违章数</string>
    <string name="familynumtitle">亲情号设置</string>
    <string name="familynumberone">亲情号码一</string>
    <string name="familynumberhint">请填写亲情号码</string>
    <string name="familynumbertwo">亲情号码二</string>
    <string name="familynumberthree">亲情号码三</string>
    <string name="familynumbersure">确定</string>
    <string name="familynumberupdate">更换</string>
    <string name="familynumberupdateone">亲情号码一 :</string>
    <string name="familynumberupdatetwo">亲情号码二 :</string>
    <string name="familynumberupdatethree">亲情号码三 :</string>
    <string name="familynumberconfirmone">新亲情号码 :</string>
    <string name="familynumberconfirmtwo">请确认号码 :</string>
    <string name="familynumberconfirm">确定修改</string>
    <string name="familynumberwrong">两次输入的号码不一致</string>
    <string name="familynumupdatewrong">数据库操作失败</string>
    <string name="familynumupdatevictory">数据库操作成功</string>
    <string name="cartitle">我的机动车</string>
    <string name="carinfo">详细信息:</string>
    <string name="carliense">车牌号码</string>
    <string name="carperson">车辆所有人</string>
    <string name="car_time">上路日期</string>
    <string name="car_classes">车辆类型</string>
    <string name="car_num">车座数量</string>
    <string name="car_identify">车辆识别码</string>
    <string name="car_engine">发动机号码</string>
    <string name="car_tel">联系方式</string>
    <string name="car_state">行驶状态</string>
    <string name="car_period">年检期止</string>
    <string name="car_color">车身颜色</string>
    <string name="car_nologin">未登陆</string>
    <string name="car_input">请输入车牌号</string>
    <string name="car_real_name">请输入真实姓名</string>
    <string name="car_wrong_tip">该用户没有车！</string>
    <string name="licensetitle">我的驾驶证</string>
    <string name="licensenum">驾驶证号:</string>
    <string name="licensetotalcent">累计积分</string>
    <string name="licensetime">驾驶证有效期止:</string>
    <string name="licenseendtime">2018-02-17</string>
    <string name="licensedistance">累计公里数</string>
    <string name="licensemodel">准驾车型</string>
    <string name="licensedate">下一清分日期</string>
    <string name="licensecent">累计记分</string>
    <string name="licensestate">当前状态</string>
    <string name="licensetip">该用户没有驾驶证！</string>
    <string name="licensevalidtip">身份验证 :</string>
    <string name="licensevalidname">姓名 :</string>
    <string name="licensevalidtipname">请输入真实姓名</string>
    <string name="licensevalidcard">身份证号 :</string>
    <string name="licensevalidtipcard">请输入身份证号</string>
    <string name="licensevalidphone">手机号 :</string>
    <string name="licensevalidtipphone">请输入手机号</string>
    <string name="licensevalidcode">发送验证码</string>
    <string name="licensevalidverifycode">验证码 :</string>
    <string name="licensevalidtipverifycode">请输入验证码</string>
    <string name="licensevalidEmpty">输入的信息不全</string>
    <string name="licensevalidsure">确定</string>
    <string name="driv_record">行驶记录</string>
    <string name="driv_record_sim">您的车载智能终端暂未安装SIM卡请安装查询</string>
    <string name="driv_record_number">车 牌 号 :</string>
    <string name="driv_record_number_tip">请输入车牌号</string>
    <string name="driv_record_pwd">密码 :</string>
    <string name="driv_record_pwd_tip">请输入密码</string>
    <string name="driv_record_sure">确认</string>
    <string name="back_title">确认退出吗？</string>
    <string name="back_sure">确定</string>
    <string name="back_cancel">取消</string>
    <string name="dialog_loading">正在加载...</string>
    <string name="car_position">爱车位置</string>
    <string name="car_position_theft_record">防盗报警历史记录</string>
    <string name="car_position_text">爱车位置</string>
    <string name="car_position_look">闪灯找车</string>
    <string name="car_alarm_search">日期/位置</string>
    <string name="car_alarm">防盗报警记录</string>
    <string name="car_alarm_item_time">报警时间 :</string>
    <string name="car_alarm_item_position">报警地点 :</string>
    <string name="car_alarm_item_license_num">驾驶证号 :</string>
    <string name="no_car_to_return">您当前没有需要归还的车辆</string>
    <string name="borrow_car_and_return">借车还车</string>
    <string name="borrow_car_and_return_right">借车记录</string>
    <string name="i_want_borrow_car">我要借车</string>
    <string name="borrow_car_num">借用车牌号 :</string>
    <string name="et_car_num">请输入车牌号</string>
    <string name="fail">验证失败 可能出现的原因</string>
    <string name="cause_one">您的位置不在车辆内</string>
    <string name="cause_two">当前网络信息不稳定</string>
    <string name="cause_san">您已重复确认驾驶员</string>
    <string name="che">车</string>
    <string name="pai">牌</string>
    <string name="hao">号</string>
    <string name="jie">结</string>
    <string name="shu">束</string>
    <string name="shi">时</string>
    <string name="jian">间</string>
    <string name="kai">开</string>
    <string name="shii">始</string>
    <string name="gui">归</string>
    <string name="huan">还</string>
    <string name="lian">联</string>
    <string name="xi">系</string>
    <string name="fang">方</string>
    <string name="fa">式</string>
    <string name="lei">类</string>
    <string name="xing">型</string>
    <string name="jia">驾</string>
    <string name="zhao">照</string>
    <string name="xingg">姓</string>
    <string name="liang">辆</string>
    <string name="ming">名</string>
    <string name="today">今天</string>
    <string name="when">10:00</string>
    <string name="who_drives">驾驶人:</string>
    <string name="license_num">驾照号码:</string>
    <string name="use_time">使用时间:</string>
    <string name="paizhao">拍照</string>
    <string name="pop_choice">从手机相册选择</string>
    <string name="pop_cancel">取消</string>
</resources>