<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--1-->
    <include layout="@layout/borrowand_return_header"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/fragment_family_number_btn_margin">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/home_div_margin_top"
            android:layout_centerVertical="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/che"
                android:textSize="@dimen/fault_size"
                android:textColor="@color/color_text"/>
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pai"
            android:textSize="@dimen/fault_size"
            android:textColor="@color/color_text"
            android:layout_marginLeft="@dimen/driv_record_margintop"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hao"
                android:textSize="@dimen/fault_size"
                android:textColor="@color/color_text"
                android:layout_marginLeft="@dimen/driv_record_margintop"/>
        </LinearLayout>
        <TextView
            android:id="@+id/carNum"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="@dimen/fault_size"
            android:textColor="@color/fault_color_text"
            android:layout_marginRight="@dimen/home_icon_size"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/half"
        android:background="@color/grey"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_lay">
        <LinearLayout
            style="@style/ll">
            <TextView
                style="@style/text_first_word"
                android:text="@string/che"
                />
            <TextView
                style="@style/text"
                android:text="@string/liang"
                />
            <TextView
                style="@style/text"
                android:text="@string/lei"
                />
            <TextView
                style="@style/text"
                android:text="@string/xing"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/type"
            style="@style/text_content"
            android:text=""
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            style="@style/ll">
            <TextView
                style="@style/text_first_word"
                android:text="@string/xingg"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ming"
                android:textSize="@dimen/license_text_tip_size"
                android:textColor="@color/color_text"
                android:layout_marginLeft="@dimen/fragment_family_number_text_bg_high"/>

        </LinearLayout>
        <TextView
            android:id="@+id/name"
            style="@style/text_content"
            android:text="" />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            android:layout_centerVertical="true">
            <TextView
                android:layout_marginLeft="@dimen/hint_size"
                android:text="@string/jia"
                style="@style/text_first_word"
                />
            <TextView
                style="@style/text_chejiahao"
                android:text="@string/zhao" />
            <TextView
                android:text="@string/hao"
                style="@style/text_chejiahao" />
        </LinearLayout>
        <TextView
            android:id="@+id/idNum"
            style="@style/text_content"
            android:text=""
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            style="@style/ll">
            <TextView
                style="@style/text_first_word"
                android:text="@string/lian"
                />
            <TextView
                android:text="@string/xi"
                style="@style/text"/>
            <TextView
                android:text="@string/fang"
                style="@style/text"/>
            <TextView
                android:text="@string/fa"
                style="@style/text"/>
        </LinearLayout>
        <TextView
            android:id="@+id/phoneNum"
            style="@style/text_content"
            android:text=""
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/hint_size"
            android:layout_centerVertical="true">
            <TextView
                android:text="@string/kai"
                style="@style/text_first_word" />
            <TextView
                android:text="@string/shii"
                style="@style/text"/>
            <TextView
                android:text="@string/shi"
                style="@style/text"/>
            <TextView
                android:text="@string/jian"
                style="@style/text"/>
        </LinearLayout>
        <TextView
            android:id="@+id/startTime"
            style="@style/text_content"
            android:text=""
         />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            style="@style/ll">
            <TextView
                style="@style/text_first_word"
                android:text="@string/jie"
                />
            <TextView
                style="@style/text"
                android:text="@string/shu"
               />
            <TextView
                style="@style/text"
                android:text="@string/shi"
                />
            <TextView
                android:text="@string/jian"
                style="@style/text"/>
        </LinearLayout>
        <TextView
            android:id="@+id/endTime"
            style="@style/text_content"
            android:text=""
            />
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_icon_size">
        <LinearLayout
            style="@style/ll">
            <TextView
                style="@style/text_first_word"
                android:text="@string/gui"
                />
            <TextView
                style="@style/text"
                android:text="@string/huan"
               />
            <TextView
                android:text="@string/shi"
                style="@style/text"
                />
            <TextView
                android:text="@string/jian"
                style="@style/text" />
        </LinearLayout>
        <TextView
            android:id="@+id/returnTime"
            android:text=""
            style="@style/text_content" />
    </RelativeLayout>
</LinearLayout>
