<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/content">
    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fail"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dialog_text_size"
        android:textColor="@color/border"
        android:textSize="@dimen/text_size_sixth"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cause_one"
        android:textSize="@dimen/license_text_tip_size"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/dialog_text_size"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cause_two"
        android:textSize="@dimen/license_text_tip_size"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/seven"/>
    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cause_san"
        android:textSize="@dimen/license_text_tip_size"
        android:textColor="@color/color_text"
        android:layout_marginTop="@dimen/seven"/>
</LinearLayout>
