<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/linewidth"
        android:background="@color/grey"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/pop_camera"
        android:text="@string/paizhao"
        style="@style/pop_text_style" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/half"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/pop_chose"
        style="@style/pop_text_style"

        android:text="@string/pop_choice"
        android:visibility="gone"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/linewidth"
        android:background="@color/grey"
        />

    <TextView
        android:id="@+id/pop_cancel"
        style="@style/pop_text_style"

        android:text="@string/pop_cancel"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/linewidth"/>
</LinearLayout>
